sidebar done except picture and grid still needs some work

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body{
 	margin: 0;
 	font-family: helvetica;
+	overflow: hidden;
 }
 
 h1,h2,h3,h4,h5,h6, p, a{
@@ -8,34 +9,13 @@ h1,h2,h3,h4,h5,h6, p, a{
 }
 
 .container{
-	padding: 40px;
+	padding: 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: flex-start;
 }
 
-.contacts{
-	background-color: pink;
-	max-width: 700px;
-	margin: 0 auto;
-	padding: 20px;
-}
 
-.user{
-	margin-bottom: 20px;
-}
 
-.user img{
-	border-radius: 50%;
-	vertical-align: middle;
-	margin-right: 20px;
-}
 
-.user-details{
-	display: inline-block;
-}
-
-.user-details h5{
-	margin: 0;
-}
-
-.user-details p{
-	margin: 0;
-}
