--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -2,6 +2,7 @@
     background-color: black;
     min-width: 200px;
     padding-left:40px;
+    padding-right:40px; 
     text-align: left;
     display: flex;
     justify-content: space-between;
@@ -11,6 +12,7 @@
 .logo{
     margin-top: 40px;
     margin-bottom: 50px;
+    max-width:100%;
 }
 .navigationMenu{
   list-style-type: none;
