--- a/src/components/Page/page.css
+++ b/src/components/Page/page.css
@@ -8,6 +8,15 @@
 }
 .pageTitle{
     color: white;
-    margin-bottom:40px;
+    margin-top:10px;
+    margin-bottom:20px;
     font-size: 4rem;
+}
+.search{
+    border-radius: 25px;
+    border:none;
+    padding:10px;
+    height:30px;
+    font-size: 20px;
+    width:350px;
 }
