--- a/src/components/GridList/gridList.css
+++ b/src/components/GridList/gridList.css
@@ -7,21 +7,26 @@ margin-top:40px;
 
 .album{
     width:100%;
-    height:500px;
     background-size:cover;
     background-color: #303030;
     opacity: 1;
     transition: all 0.2s ease-in;
 }
 .grid__item{
-    width:24%;
+    width: 24%;
     text-align: center;
     color:white;
     font-size: large;
     font-weight: bold;
-    text-decoration: none;   
+    text-decoration: none;
     margin-top:10px;
-    margin-bottom: 10px;     
+    margin-bottom: 10px;
+}
+.album:before {
+    content: "";
+    display: block;
+    width: 100%;
+    padding-top: 100%;
 }
 .songName{
     margin-top:15px;
