--- a/src/index.css
+++ b/src/index.css
@@ -8,17 +8,17 @@ h1,h2,h3,h4,h5,h6, p, a{
 	font-family: helvetica;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 .container{
 	padding: 0;
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-start;
-	align-items: flex-start;
+	/*justify-content: flex-start;*/
+	/*align-items: flex-start;*/
 }
 a{
 	cursor: pointer;
 }
-
-
-
-
