--- a/src/index.css
+++ b/src/index.css
@@ -28,11 +28,14 @@ a{
 	justify-content: space-between;
 	align-items: center;
 	position: fixed;
-	padding:10px;
+	padding-top:20px;
+	padding-bottom:20px;
+	padding-right:40px;
+	padding-left:40px;
 	flex-direction: row;
 	bottom:0;
 	width:100%;
-	height: 8vh;
+	height: 100px;;
 	background-color:#252525;
 }
 .progress-bar{
