Added artist cover

--- a/src/components/Artist/artist.css
+++ b/src/components/Artist/artist.css
@@ -1,4 +1,66 @@
 h3 {
     font-size: 2.5rem;
     margin: 0;
+    padding: 0 45px;
+}
+h2 {
+    font-size: 4rem;
+    margin: 0;
+    margin-bottom: 17px;
+}
+p {
+    margin: 0;
+    padding-left: 10px;
+}
+.btn {
+    border-radius: 25px;
+    font-size: 13px;
+    color: white !important;
+    text-decoration: none !important;
+    padding: 13px 22px;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-right: 10px;
+}
+.btn-green {
+    background-color: #2ebd59;
+    transition: 0.3s linear;
+}
+.btn-green:hover {
+    background-color: #238240;
+}
+.btn-outline {
+    background-color: rgba(0, 0, 0, 0.4);
+    border: 1px solid white;
+}
+
+.artist__cover {
+    width: 100%;
+    background-size: cover;
+    background-position: 50% 25%;
+    position: relative;
+    margin-bottom: 40px;
+}
+.artist__cover__details {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    padding: 20px;
+    z-index: 10;
+}
+.artist__cover:before {
+    content: "";
+    display: block;
+    padding-top: 35%;
+    width: 100%;
+}
+.artist__cover:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: linear-gradient(200deg, rgba(10, 255, 210, 0.2) 20%, rgba(8, 2, 58, 0.67) 60%);
 }
