--- a/src/components/Page/page.css
+++ b/src/components/Page/page.css
@@ -4,7 +4,6 @@
     background-color:#191919;
     height:100vh;
     overflow-y: auto;
-    padding:20px;
 
 }
 .pageTitle{
@@ -12,6 +11,8 @@
     margin-top:10px;
     margin-bottom:20px;
     font-size: 3rem;
+    margin-top: 40px;
+    padding: 0 40px;
 }
 .search{
     border-radius: 25px;
@@ -21,4 +22,5 @@
     font-size: 20px;
     width: 300px;
     outline: none !important;
+    margin-left: 43px;
 }
