--- a/src/components/GridList/gridList.css
+++ b/src/components/GridList/gridList.css
@@ -3,6 +3,7 @@ display: flex;
 flex-wrap: wrap;
 justify-content: space-around;
 margin-top:20px;
+padding: 0 40px;
 }
 
 .grid__item__image {
@@ -31,6 +32,6 @@ margin-top:20px;
 ..grid__item__title {
     margin-top:15px;
 }
-.grid__item:hover .album {
+.grid__item:hover .grid__item__image {
     opacity: 0.2
 }
