--- a/src/components/Player/player.css
+++ b/src/components/Player/player.css
@@ -37,12 +37,12 @@
     cursor: pointer;
 }
 .button:hover{
-    color:#62D61F;
+    color:#1ED760;
 }
 .progress__bar__finished{
 	width:0%;
 	height: 5px;
-	background-color: #62D61F
+	background-color: #1ED760
 }
 .durations{
     font-size:20px;
