--- a/src/components/Artist/artist.css
+++ b/src/components/Artist/artist.css
@@ -1,7 +1,12 @@
 h3 {
     font-size: 2.5rem;
-    margin: 0;
+    margin-top:  40px;
     padding: 0 45px;
+}
+h3.top-tracks {
+    font-size: 2.5rem;
+    margin: 0;
+    padding: 10px 13px;
 }
 h2 {
     font-size: 4rem;
@@ -11,6 +16,9 @@ h2 {
 p {
     margin: 0;
     padding-left: 10px;
+}
+.artist {
+    background-color: black;
 }
 .btn {
     border-radius: 25px;
@@ -40,7 +48,6 @@ p {
     background-size: cover;
     background-position: 50% 25%;
     position: relative;
-    margin-bottom: 40px;
 }
 .artist__cover__details {
     width: 100%;
@@ -63,4 +70,8 @@ p {
     top: 0;
     bottom: 0;
     background: linear-gradient(200deg, rgba(10, 255, 210, 0.2) 20%, rgba(8, 2, 58, 0.67) 60%);
+}
+.tracks-wrapper {
+    padding: 20px 30px;
+    background-color: #191919;
 }
