--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,8 @@ h1,h2,h3,h4,h5,h6, p, a{
 a{
 	cursor: pointer;
 }
+@media screen and (max-width: 1000px) {
+    .container {
+        flex-direction: column;
+    }
+}
