--- a/src/components/GridList/gridList.css
+++ b/src/components/GridList/gridList.css
@@ -1,37 +1,62 @@
-.grid{
-display: flex;
-flex-wrap: wrap;
-justify-content: space-around;
-margin-top:20px;
-padding: 0 40px;
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 20px;
+    padding: 0 40px;
 }
 
 .grid__item__image {
-    width:100%;
-    background-size:cover;
+    width: 100%;
+    background-size: cover;
     background-color: #303030;
     opacity: 1;
     transition: all 0.2s ease-in;
 }
+
 .grid__item {
     width: 24%;
     text-align: center;
-    color:white;
+    color: white;
     font-size: large;
     font-weight: bold;
     text-decoration: none;
-    margin-top:10px;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
+
 .grid__item__image:before {
     content: "";
     display: block;
     width: 100%;
     padding-top: 100%;
 }
+
 ..grid__item__title {
-    margin-top:15px;
+    margin-top: 15px;
 }
+
 .grid__item:hover .grid__item__image {
     opacity: 0.2
+}
+
+@media screen and (max-width: 1000px) {
+    .grid{
+        margin-bottom:50px; 
+    }
+    .grid__item {
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .grid__item {
+        width: 48%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .grid__item {
+        width: 100%;
+    }
 }
