fix album page responsiveness

--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -86,3 +86,8 @@
     font-size: medium;
 }
 }
+@media screen and (max-width: 480px) {
+    .navigationMenu__item__link, .loggedIn {
+        font-size: small;
+    }
+}
